Upgraded to React 16. Redux-Automata 2. Added AppInsights.

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/variables";
-.jumbotron{    
-    border: 1px solid $gray-lighter;
-}
+// @import "~bootstrap/scss/variables";
+// .jumbotron{    
+//     border: 1px solid $gray-lighter;
+// }
