Updated packages. Added import-glob and ts-lint.

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,7 +1,5 @@
- @import "~bootstrap/scss/_functions";
- @import "~bootstrap/scss/_variables";
- @import "~bootstrap/scss/_mixins";
+@import "~bootstrap/scss/_functions";
+@import "~bootstrap/scss/_variables";
+@import "~bootstrap/scss/_mixins";
 
-.jumbotron{    
-    border: 1px solid $gray-700;
-}
+@import "../../app/**/*.scss";
